--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,35 @@
 version: '3.1'
 services:
   stats-server:
+    build: stat/stat-service
+    container_name: stat-service
+
     ports:
       - "9090:9090"
 
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stat
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=user
+
   stats-db:
     image: postgres:14-alpine
-
-  ewm-service:
     ports:
-      - "8080:8080"
+      - "6542:5432"
+    environment:
+      - DB_NAME=stat
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=user
 
-  ewm-db:
-    image: postgres:14-alpine
+#  ewm-service:
+#    ports:
+#      - "8080:8080"
+#
+#      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stat
+#      - SPRING_DATASOURCE_USERNAME=user
+#      - SPRING_DATASOURCE_PASSWORD=user
+#      - CLIENT_URL=stats-server:9090
+
+
+#  ewm-db:
+#    image: postgres:14-alpine
