--- a/stat/pom.xml
+++ b/stat/pom.xml
@@ -6,7 +6,6 @@
 
     <packaging>pom</packaging>
 
-    <groupId>ru.practicum</groupId>
     <artifactId>stat</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
@@ -16,16 +15,45 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
-
     <modules>
         <module>stat-client</module>
         <module>stat-dto</module>
         <module>stat-service</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>5.3.27</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>5.3.27</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ru.practicum</groupId>
+                <artifactId>stat-dto</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ru.practicum</groupId>
+                <artifactId>stat-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.13.5</version>
+            </dependency>
+
+
+        </dependencies>
+    </dependencyManagement>
 </project>
