--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,18 +23,28 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=user
 
-#  main-service:
-#    build: ./main-service
-##    image: main-service
-#    container_name: main-service
-#    ports:
-#      - "8080:8080"
+  main-service:
+    build: ./main-service
+    image: main-service
+    container_name: main-service
+    ports:
+      - "8080:8080"
+    depends_on:
+      - main-db
+      - stats-server
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stat
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=user
+      - CLIENT_URL=stats-server:9090
 
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stat
-#      - SPRING_DATASOURCE_USERNAME=user
-#      - SPRING_DATASOURCE_PASSWORD=user
-#      - CLIENT_URL=stats-server:9090
 
-
-#  main-db:
-#    image: postgres:14-alpine
+  main-db:
+    image: postgres:14-alpine
+    container_name: main
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=main
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=user
