--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,28 +23,28 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=user
 
-  main-service:
+  ewm-service:
     build: ./main-service
     image: main-service
-    container_name: main-service
+    container_name: ewm-service
     ports:
       - "8080:8080"
     depends_on:
-      - main-db
+      - ewm-db
       - stats-server
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stat
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-db
       - SPRING_DATASOURCE_USERNAME=user
       - SPRING_DATASOURCE_PASSWORD=user
-      - CLIENT_URL=stats-server:9090
+      - STATS_SERVER_URL=http://stats-server:9090
 
 
-  main-db:
+  ewm-db:
     image: postgres:14-alpine
-    container_name: main
+    container_name: ewm-db
     ports:
       - "6541:5432"
     environment:
-      - POSTGRES_DB=main
+      - POSTGRES_DB=ewm-db
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=user
