--- a/stat/stat-service/pom.xml
+++ b/stat/stat-service/pom.xml
@@ -31,7 +31,7 @@
 
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>stat-client</artifactId>
+            <artifactId>stat-dto</artifactId>
         </dependency>
 
         <dependency>
